@@ -95,7 +95,7 @@ To that moment I wrote the simplest possible [[https://github.com/yugaego/emacs-
   for better readability.
 - Rest of configs/*.el :: Example configuration files, not loaded automatically.
 - install-packages.el :: Install configured packages after cloning (on new devices).
-- private-init.el :: Private information is stored in this file. Naturally, this
+- local-pre-init.el :: Private information is stored in this file. Naturally, this
   file is excluded from the repo and loaded only if present in your file system.\\
   For example, =/configs/init-smtp.el= mentions which variables has to be set in
   this file.
