@@ -11,6 +11,7 @@ Changed:
   - Frames default width slightly balanced.
   - Use package exec-path-from-shell to load user's shell environment variables.
   - markdown-mode: use multimarkdown parser (if available).
+  - Rename private-init.el to local-pre-init.el to reflect order of loading.
 
 Fixed:
   - Minor modes enabling.
